--- a/style.css
+++ b/style.css
@@ -11,3 +11,16 @@
 	opacity: 0;
 	transition: opacity 0.5s;
 }
+
+.map {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 20%;
+	height: 40%;
+}
+
+.map > canvas {
+	width: 100%;
+	height: 100%;
+}
