--- a/client/style.css
+++ b/client/style.css
@@ -14,10 +14,10 @@
 
 .map {
 	position: absolute;
-	top: 0;
+	top: 5%;
 	right: 0;
 	width: 20%;
-	height: 100%;
+	height: 90%;
 }
 
 .map > canvas {
