--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,10 @@
+html {
+	user-select: none;
+	-moz-user-select: -moz-none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+}
+
 .cross {
 	position: absolute;
 	top: 50%;
